--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 
@@ -166,7 +167,6 @@ body {
     border-radius: 50%;
     position: absolute;
     z-index: 0;
-    bottom: 50px;
 }
 
 .cir_child {
@@ -289,7 +289,7 @@ h3.title {
 
 
 .about {
-    margin: 30px 0;
+    margin: 35px 0;
     border: 1px solid rgb(81, 49, 94);
     border-radius: 0 30px 0 0;
     overflow: hidden;
@@ -388,7 +388,6 @@ h3.title {
 }
 
 .social {
-    padding-top: 20px;
     position: relative;
     padding: 10px 30px;
     border-radius: 10px;
